support clone from github app